Java Optimisation